# MLOps_training

./: .gitignore  Dockerfile.api  Dockerfile.app  README.md  docker-compose.yml  main.py  pyproject.toml  run_training.sh
models/: best_model.pkl  scaler.pkl
src/: api.py  app.py  data_preprocessing.py  model.py
