[project]
name = "churn-mlops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "joblib>=1.4.0",
    "matplotlib>=3.10.9",
    "mlflow>=3.13.0",
    "numpy>=2.4.6",
    "pandas>=2.3.3",
    "plotly>=5.22.0",
    "pydantic>=2.7.0",
    "python-multipart>=0.0.9",
    "requests>=2.32.0",
    "scikit-learn>=1.8.0",
    "streamlit>=1.35.0",
    "uvicorn[standard]>=0.30.0",
    "xgboost>=3.2.0",
    "seaborn>=0.13.2",
]
